--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		margin: 0;
 		padding: 0;
 	}
-.jq22 { width: 500px; margin: 150px auto; font-size: 14px; border: 1px #5495f6 solid; height: 50px;}
+.jq22 { width: 500px; margin: 150px auto; font-size: 14px; border: 1px #5495f6 solid;
+height: 60px;
+}
 .jq22 a { margin: 0 15px; color: #333; text-decoration: none; border: 1px #f6851e solid;}
 .jq22 a:hover { text-decoration: underline;}
 
@@ -23,6 +25,39 @@
 		margin-bottom: 20px;
 		width: 120px;
 	}
+
+	span {
+		width: 100%;
+		height: 100%;
+		background: #fff;
+	}
+
+	.a {
+		padding: 20px;
+		background: #f6851e;
+	}
+
+	.b {
+		padding: 15px;
+		background: #4ba871;
+	}
+
+	.c {
+		padding: 10px;
+		background: #198ef6;
+	}
+
+	.d {
+		padding: 5px;
+		background: #f6578e;
+	}
+
+	.e {
+		flex-wrap: wrap;
+		margin: 20px 30px 15px 5px;
+		padding: 20px;
+	}
+
 </style>
 </head>
 
@@ -34,11 +69,9 @@
 <div class="btn" data-flag="play">play</div>
 
 <div class="jq22 auto-scroll">
-	<div class="auto-scroll-wapper">
-		<a href="#">0000000000000000000000000000</a>
-		<a href="#">1111111111111111111111111111</a>
-		<a href="#">2222222222222222222222222222</a>
-		<a href="#">3333333333333333333333333333</a>
+	<div class="auto-scroll-wapper e">
+		<a class="a" href="#"><span>0000000000000000000000000000</span></a>
+		<a class="b" href="#"><span>1111111111111111111111111111</span></a>
 	</div>
 </div>
 
@@ -47,12 +80,11 @@
 <script>
 $(function(){
 	let autoScroll = $('.jq22').autoScroll({
-		'direction': 'left',
-		speed: 0.5,
-		runshort: false,
+		'direction': 'up',
+		speed: 1,
+		runshort: true,
 		hoverstop: false,
 	});
-	console.log('autoScroll: ', autoScroll)
 
 	$('.btn').on('click', function () {
 		let flag = $(this).data('flag')
