--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ height: 60px;
 <script>
 $(function(){
 	let autoScroll = $('.jq22').autoScroll({
-		'direction': 'up',
+		// 'direction': 'up',
 		speed: 1,
 		runshort: true,
-		hoverstop: false,
+		hoverstop: true,
 	});
 
 	$('.btn').on('click', function () {
